fix: issue with print card list overlap

--- a/styles/card.module.scss
+++ b/styles/card.module.scss
@@ -3,6 +3,11 @@
 	font-size: 1.4rem;
 }
 
+.cardWrapper img {
+	max-width: 100%;
+	height: 100%;
+}
+
 .imageCollectionWrapper {
 	display: flex;
 }
